--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </ul>
         <hgroup>
         <h2 id="competition-reference">Competition Reference</h2>
-        <a href="./competition-mathematics/reference.html">[html]</a>
+        <a href="./math-comp/reference.html">[html]</a>
         </hgroup>
         <h2 id="section"></h2>
         <h1 id="projects">Projects</h1>
@@ -152,95 +152,120 @@
         operations on numbers can be expressed as combinators</li>
         </ul>
         <h1 id="university-courses">University Courses</h1>
+        <p>The coloured circles represent: <span
+        class="green ball"></span> officially completed, <span
+        class="yellow ball"></span> currently taking, <span
+        class="aqua ball"></span> audited or self-taught, <span
+        class="red ball"></span> planned to take.</p>
+        <hgroup>
         <h2 id="waterloo-undergraduate-degree">Waterloo Undergraduate
         Degree</h2>
+        : Bachelors of Computer Science
+        <p class="date">
+        2022 - Present
+        </p>
+        </hgroup>
         <table style="width:98%;">
         <colgroup>
-        <col style="width: 4%" />
-        <col style="width: 15%" />
-        <col style="width: 15%" />
-        <col style="width: 15%" />
-        <col style="width: 15%" />
-        <col style="width: 15%" />
-        <col style="width: 15%" />
+        <col style="width: 2%" />
+        <col style="width: 13%" />
+        <col style="width: 13%" />
+        <col style="width: 13%" />
+        <col style="width: 13%" />
+        <col style="width: 13%" />
+        <col style="width: 13%" />
+        <col style="width: 12%" />
         </colgroup>
         <thead>
         <tr class="header">
         <th>Term</th>
-        <th colspan="6">Courses</th>
+        <th colspan="7">Courses</th>
         </tr>
         </thead>
         <tbody>
         <tr class="odd">
-        <td>Fall ’22</td>
+        <td>F ’22</td>
         <td><span class="green ball"></span>MATH 145</td>
         <td><span class="green ball"></span>MATH 147</td>
         <td><span class="green ball"></span>CS 145</td>
         <td><span class="green ball"></span>ENGL 109</td>
         <td><span class="green ball"></span>PHYS 121</td>
         <td></td>
+        <td></td>
         </tr>
         <tr class="even">
-        <td>Winter ’23</td>
+        <td>W ’23</td>
         <td><span class="green ball"></span>MATH 146</td>
         <td><span class="green ball"></span>MATH 148</td>
         <td><span class="green ball"></span>CS 146</td>
+        <td><span class="green ball"></span>CS 136L</td>
         <td><span class="green ball"></span>ENGL 108B</td>
         <td><span class="green ball"></span>PHYS 122</td>
         <td><span class="green ball"></span>PD 1</td>
         </tr>
         <tr class="odd">
-        <td>Spring ’23</td>
+        <td>S ’23</td>
         <td><span class="green ball"></span>COOP 1</td>
         <td><span class="green ball"></span>PD 11</td>
         <td></td>
         <td></td>
         <td></td>
         <td></td>
+        <td></td>
         </tr>
         <tr class="even">
-        <td>Fall ’23</td>
+        <td>F ’23</td>
         <td><span class="yellow ball"></span>MATH 245</td>
         <td><span class="yellow ball"></span>MATH 247</td>
         <td><span class="yellow ball"></span>STAT 240</td>
         <td><span class="yellow ball"></span>CS 245E</td>
         <td><span class="yellow ball"></span>CS 246E</td>
         <td></td>
+        <td></td>
         </tr>
         <tr class="odd">
-        <td>Winter ’24</td>
+        <td>W ’24</td>
         <td><span class="red ball"></span>MATH 249</td>
         <td><span class="red ball"></span>STAT 241</td>
         <td><span class="red ball"></span>CO 255</td>
         <td><span class="red ball"></span>CS 240E</td>
         <td><span class="red ball"></span>CS 241</td>
         <td><span class="red ball"></span>JAPAN 101R</td>
+        <td></td>
         </tr>
         </tbody>
         </table>
         <h1 id="textbooks-readings">Textbooks &amp; Readings</h1>
+        <p>The coloured circles represent: <span
+        class="green ball"></span> read, <span
+        class="yellow ball"></span> currently reading, <span
+        class="red ball"></span> planned to read.</p>
         <h2 id="computer-science-textbooks">Computer Science
         Textbooks</h2>
-        <p><span class="green ball"></span><em>Learn You a Haskell for
-        Great Good!</em> by Miran Lipovača</p>
-        <p><span class="yellow ball"></span><em>Concurrency in Go</em>
-        by Katherine Cox-Buday</p>
-        <p><span class="yellow ball"></span><em>Specifying Systems</em>
-        by Leslie Lamport</p>
-        <p><span class="yellow ball"></span><em>Category Theory for
-        Programmers</em> by Bartosz Milewski</p>
-        <p><span class="yellow ball"></span><em>Effective Modern
-        C++</em> by Scott Meyers</p>
-        <p><span class="red ball"></span><em>Real World Haskell</em> by
-        O’Sullivan, Stewart &amp; Goerzen</p>
-        <p><span class="red ball"></span><em>Structure and
+        <ul>
+        <li><span class="green ball"></span> <em>Learn You a Haskell for
+        Great Good!</em> by Miran Lipovača</li>
+        <li><span class="yellow ball"></span> <em>Concurrency in Go</em>
+        by Katherine Cox-Buday</li>
+        <li><span class="yellow ball"></span> <em>Specifying
+        Systems</em> by Leslie Lamport</li>
+        <li><span class="yellow ball"></span> <em>Category Theory for
+        Programmers</em> by Bartosz Milewski</li>
+        <li><span class="yellow ball"></span> <em>Effective Modern
+        C++</em> by Scott Meyers</li>
+        <li><span class="red ball"></span> <em>Real World Haskell</em>
+        by O’Sullivan, Stewart &amp; Goerzen</li>
+        <li><span class="red ball"></span> <em>Structure and
         Interpretation of Computer Programs</em> by Abelson, Sussman
-        &amp; Sussman</p>
+        &amp; Sussman</li>
+        </ul>
         <h2 id="mathematics-textbooks">Mathematics Textbooks</h2>
-        <p><span class="green ball"></span><em>To Mock a
-        Mockingbird</em> by Raymond Smullyan</p>
-        <p><span class="yellow ball"></span><em>The Red Book of
-        Mathematical Problems</em> by Williams &amp; Hardy</p>
+        <ul>
+        <li><span class="green ball"></span> <em>To Mock a
+        Mockingbird</em> by Raymond Smullyan</li>
+        <li><span class="yellow ball"></span> <em>The Red Book of
+        Mathematical Problems</em> by Williams &amp; Hardy</li>
+        </ul>
       </article>
     </main>
     <footer>
