--- a/math-comp/reference.html
+++ b/math-comp/reference.html
@@ -98,6 +98,26 @@
         class="toc-section-number">3.9</span> Carnot’s Theorem</a></li>
         <li><a href="#japanese-theorem" id="toc-japanese-theorem"><span
         class="toc-section-number">3.10</span> Japanese Theorem</a></li>
+        <li><a href="#ravis-substitution"
+        id="toc-ravis-substitution"><span
+        class="toc-section-number">3.11</span> Ravi’s
+        Substitution</a></li>
+        <li><a href="#kimberling-center"
+        id="toc-kimberling-center"><span
+        class="toc-section-number">3.12</span> Kimberling
+        Center</a></li>
+        <li><a href="#barycentric-coordinates"
+        id="toc-barycentric-coordinates"><span
+        class="toc-section-number">3.13</span> Barycentric
+        Coordinates</a></li>
+        <li><a href="#isogonal-conjugate"
+        id="toc-isogonal-conjugate"><span
+        class="toc-section-number">3.14</span> Isogonal
+        Conjugate</a></li>
+        <li><a href="#miquels-point" id="toc-miquels-point"><span
+        class="toc-section-number">3.15</span> Miquel’s Point</a></li>
+        <li><a href="#steiner-line" id="toc-steiner-line"><span
+        class="toc-section-number">3.16</span> Steiner Line</a></li>
         </ul></li>
         <li><a href="#probability" id="toc-probability"><span
         class="toc-section-number">4</span> Probability</a>
@@ -110,14 +130,78 @@
         <li><a href="#combinatorics" id="toc-combinatorics"><span
         class="toc-section-number">5</span> Combinatorics</a>
         <ul>
+        <li><a href="#case-work" id="toc-case-work"><span
+        class="toc-section-number">5.1</span> Case Work</a></li>
+        <li><a href="#bijective-counting"
+        id="toc-bijective-counting"><span
+        class="toc-section-number">5.2</span> Bijective
+        Counting</a></li>
         <li><a href="#catalan-numbers" id="toc-catalan-numbers"><span
-        class="toc-section-number">5.1</span> Catalan Numbers</a></li>
+        class="toc-section-number">5.3</span> Catalan Numbers</a></li>
         <li><a href="#stirling-numbers" id="toc-stirling-numbers"><span
-        class="toc-section-number">5.2</span> Stirling Numbers</a></li>
+        class="toc-section-number">5.4</span> Stirling Numbers</a></li>
+        </ul></li>
+        <li><a href="#inequalities" id="toc-inequalities"><span
+        class="toc-section-number">6</span> Inequalities</a>
+        <ul>
+        <li><a href="#min-hm-gm-am-rms-max-inequality"
+        id="toc-min-hm-gm-am-rms-max-inequality"><span
+        class="toc-section-number">6.1</span> min-HM-GM-AM-RMS-max
+        Inequality</a></li>
+        <li><a href="#muirhead-inequality"
+        id="toc-muirhead-inequality"><span
+        class="toc-section-number">6.2</span> Muirhead
+        Inequality</a></li>
+        <li><a href="#schurs-inequality"
+        id="toc-schurs-inequality"><span
+        class="toc-section-number">6.3</span> Schur’s
+        Inequality</a></li>
+        <li><a href="#karamatas-inequality"
+        id="toc-karamatas-inequality"><span
+        class="toc-section-number">6.4</span> Karamata’s
+        Inequality</a></li>
+        <li><a href="#cauchy-schwarz-inequality"
+        id="toc-cauchy-schwarz-inequality"><span
+        class="toc-section-number">6.5</span> Cauchy-Schwarz
+        Inequality</a></li>
+        <li><a href="#hölders-inequality"
+        id="toc-hölders-inequality"><span
+        class="toc-section-number">6.6</span> Hölder’s
+        Inequality</a></li>
+        <li><a href="#jensens-inequality"
+        id="toc-jensens-inequality"><span
+        class="toc-section-number">6.7</span> Jensen’s
+        Inequality</a></li>
+        <li><a href="#minkowskis-inequality"
+        id="toc-minkowskis-inequality"><span
+        class="toc-section-number">6.8</span> Minkowski’s
+        Inequality</a></li>
+        </ul></li>
+        <li><a href="#assorted-problems"
+        id="toc-assorted-problems">Assorted Problems</a>
+        <ul>
+        <li><a href="#high-school-level" id="toc-high-school-level">High
+        School Level</a></li>
+        <li><a href="#undergraduate-level"
+        id="toc-undergraduate-level">Undergraduate Level</a></li>
+        </ul></li>
+        <li><a href="#sources" id="toc-sources">Sources</a>
+        <ul>
+        <li><a href="#high-school-level-1"
+        id="toc-high-school-level-1">High School Level</a></li>
+        <li><a href="#undergraduate-level-1"
+        id="toc-undergraduate-level-1">Undergraduate Level</a></li>
         </ul></li>
         </ul>
       </nav>
       <article>
+        <p>Whenever reference is made to “High School level” in this
+        document, it should be noted this implicitly also means
+        “Undergraduate level” since the latter is a superset of the
+        former.</p>
+        <p>The coloured circles represent: <span
+        class="green ball"></span> High School level problems, <span
+        class="orange ball"></span> Undergraduate level problems.</p>
         <h1 data-number="1" id="algebra"><span
         class="header-section-number">1</span> Algebra</h1>
         <hgroup>
@@ -136,7 +220,9 @@
         <a
         href="https://mathworld.wolfram.com/RootofUnity.html">[wolf]</a>
         </hgroup>
-        <p>UG Problems: Red Book q1</p>
+        <ul>
+        <li><span class="orange ball"></span> Red Book q1</li>
+        </ul>
         <hgroup>
         <h2 data-number="1.3" id="vietas-formula"><span
         class="header-section-number">1.3</span> Vieta’s Formula</h2>
@@ -163,7 +249,9 @@
         <a
         href="https://en.wikipedia.org/wiki/Quadratic_residue">[wiki]</a>
         </hgroup>
-        <p>UG Problems: Red Book q1</p>
+        <ul>
+        <li><span class="orange ball"></span> Red Book q1</li>
+        </ul>
         <hgroup>
         <h2 data-number="2.2" id="legendre-symbol"><span
         class="header-section-number">2.2</span> Legendre Symbol</h2>
@@ -241,7 +329,10 @@
         <a
         href="https://mathworld.wolfram.com/OrdinaryLine.html">[wolf]</a>
         </hgroup>
-        <p>HS &amp; UG Problems: Proof of Sylvester-Gallai Theorem</p>
+        <ul>
+        <li><span class="green ball"></span> Proof of Sylvester-Gallai
+        Theorem</li>
+        </ul>
         <hgroup>
         <h2 data-number="3.2" id="sylvester-gallai-theorem"><span
         class="header-section-number">3.2</span> Sylvester-Gallai
@@ -279,7 +370,10 @@
         <a
         href="https://en.wikipedia.org/wiki/Euler%27s_theorem_in_geometry">[wiki]</a>
         </hgroup>
-        <p>HS &amp; UG Problems: Proof of Sylvester’s Problem</p>
+        <ul>
+        <li><span class="green ball"></span> Proof of Sylvester’s
+        Problem</li>
+        </ul>
         <hgroup>
         <h2 data-number="3.8" id="sylvesters-problem"><span
         class="header-section-number">3.8</span> Sylvester’s
@@ -299,6 +393,28 @@
         <a
         href="https://en.wikipedia.org/wiki/Japanese_theorem_for_cyclic_polygons">[wiki]</a>
         </hgroup>
+        <h2 data-number="3.11" id="ravis-substitution"><span
+        class="header-section-number">3.11</span> Ravi’s
+        Substitution</h2>
+        <ul>
+        <li><span class="green ball"></span> Assorted Problem (1)</li>
+        </ul>
+        <hgroup>
+        <h2 data-number="3.12" id="kimberling-center"><span
+        class="header-section-number">3.12</span> Kimberling Center</h2>
+        <a
+        href="https://mathworld.wolfram.com/KimberlingCenter.html">[wolf]</a>
+        </hgroup>
+        <h2 data-number="3.13" id="barycentric-coordinates"><span
+        class="header-section-number">3.13</span> Barycentric
+        Coordinates</h2>
+        <h2 data-number="3.14" id="isogonal-conjugate"><span
+        class="header-section-number">3.14</span> Isogonal
+        Conjugate</h2>
+        <h2 data-number="3.15" id="miquels-point"><span
+        class="header-section-number">3.15</span> Miquel’s Point</h2>
+        <h2 data-number="3.16" id="steiner-line"><span
+        class="header-section-number">3.16</span> Steiner Line</h2>
         <h1 data-number="4" id="probability"><span
         class="header-section-number">4</span> Probability</h1>
         <hgroup>
@@ -310,18 +426,90 @@
         </hgroup>
         <h1 data-number="5" id="combinatorics"><span
         class="header-section-number">5</span> Combinatorics</h1>
+        <h2 data-number="5.1" id="case-work"><span
+        class="header-section-number">5.1</span> Case Work</h2>
+        <ul>
+        <li><span class="green ball"></span> Red Book q2</li>
+        </ul>
+        <h2 data-number="5.2" id="bijective-counting"><span
+        class="header-section-number">5.2</span> Bijective Counting</h2>
+        <ul>
+        <li><span class="green ball"></span> Red Book q2</li>
+        </ul>
         <hgroup>
-        <h2 data-number="5.1" id="catalan-numbers"><span
-        class="header-section-number">5.1</span> Catalan Numbers</h2>
+        <h2 data-number="5.3" id="catalan-numbers"><span
+        class="header-section-number">5.3</span> Catalan Numbers</h2>
         <a
         href="https://en.m.wikipedia.org/wiki/Catalan_number">[wiki]</a>
         </hgroup>
         <hgroup>
-        <h2 data-number="5.2" id="stirling-numbers"><span
-        class="header-section-number">5.2</span> Stirling Numbers</h2>
+        <h2 data-number="5.4" id="stirling-numbers"><span
+        class="header-section-number">5.4</span> Stirling Numbers</h2>
         <a
         href="https://en.wikipedia.org/wiki/Stirling_number">[wiki]</a>
         </hgroup>
+        <h1 data-number="6" id="inequalities"><span
+        class="header-section-number">6</span> Inequalities</h1>
+        <h2 data-number="6.1" id="min-hm-gm-am-rms-max-inequality"><span
+        class="header-section-number">6.1</span> min-HM-GM-AM-RMS-max
+        Inequality</h2>
+        <h2 data-number="6.2" id="muirhead-inequality"><span
+        class="header-section-number">6.2</span> Muirhead
+        Inequality</h2>
+        <h2 data-number="6.3" id="schurs-inequality"><span
+        class="header-section-number">6.3</span> Schur’s Inequality</h2>
+        <h2 data-number="6.4" id="karamatas-inequality"><span
+        class="header-section-number">6.4</span> Karamata’s
+        Inequality</h2>
+        <h2 data-number="6.5" id="cauchy-schwarz-inequality"><span
+        class="header-section-number">6.5</span> Cauchy-Schwarz
+        Inequality</h2>
+        <h2 data-number="6.6" id="hölders-inequality"><span
+        class="header-section-number">6.6</span> Hölder’s
+        Inequality</h2>
+        <hgroup>
+        <h2 data-number="6.7" id="jensens-inequality"><span
+        class="header-section-number">6.7</span> Jensen’s
+        Inequality</h2>
+        <a
+        href="https://en.wikipedia.org/wiki/Jensen%27s_inequality">[wiki]</a>
+        </hgroup>
+        <hgroup>
+        <h2 data-number="6.8" id="minkowskis-inequality"><span
+        class="header-section-number">6.8</span> Minkowski’s
+        Inequality</h2>
+        <a
+        href="https://en.wikipedia.org/wiki/Minkowski_inequality">[wiki]</a>
+        </hgroup>
+        <h1 class="unnumbered" id="assorted-problems">Assorted
+        Problems</h1>
+        <h2 class="unnumbered" id="high-school-level">High School
+        Level</h2>
+        <ol class="example" type="1">
+        <li>Let <span
+        class="math inline">△<em>A</em><em>B</em><em>C</em></span> have
+        inradius <span class="math inline"><em>r</em></span> and
+        circumradius <span class="math inline"><em>R</em></span>. Show
+        that we have <span
+        class="math inline"><em>R</em> ≥ 2<em>r</em></span> with
+        equality iff <span
+        class="math inline">△<em>A</em><em>B</em><em>C</em></span> is
+        equilateral.</li>
+        </ol>
+        <h2 class="unnumbered" id="undergraduate-level">Undergraduate
+        Level</h2>
+        <h1 class="unnumbered" id="sources">Sources</h1>
+        <h2 class="unnumbered" id="high-school-level-1">High School
+        Level</h2>
+        <h2 class="unnumbered" id="undergraduate-level-1">Undergraduate
+        Level</h2>
+        <dl>
+        <dt>Red Book</dt>
+        <dd>
+        <em>The Red Book of Mathematical Problems</em> by Kenneth S.
+        Williams and Kenneth Hardy
+        </dd>
+        </dl>
       </article>
     </main>
     <footer>
