added new latex formatting and more content

--- a/index.html
+++ b/index.html
@@ -152,11 +152,7 @@
         operations on numbers can be expressed as combinators</li>
         </ul>
         <h1 id="university-courses">University Courses</h1>
-        <p>The coloured circles represent: <span
-        class="green ball"></span> officially completed, <span
-        class="yellow ball"></span> currently taking, <span
-        class="aqua ball"></span> audited or self-taught, <span
-        class="red ball"></span> planned to take.</p>
+        <p>Italics means self-taught or audited.</p>
         <hgroup>
         <h2 id="waterloo-undergraduate-degree">Waterloo Undergraduate
         Degree</h2>
@@ -165,14 +161,14 @@
         2022 - Present
         </p>
         </hgroup>
-        <table style="width:98%;">
+        <table style="width:94%;">
         <colgroup>
-        <col style="width: 2%" />
-        <col style="width: 13%" />
-        <col style="width: 13%" />
-        <col style="width: 13%" />
-        <col style="width: 13%" />
-        <col style="width: 13%" />
+        <col style="width: 8%" />
+        <col style="width: 11%" />
+        <col style="width: 11%" />
+        <col style="width: 11%" />
+        <col style="width: 11%" />
+        <col style="width: 11%" />
         <col style="width: 13%" />
         <col style="width: 12%" />
         </colgroup>
@@ -185,28 +181,28 @@
         <tbody>
         <tr class="odd">
         <td>F ’22</td>
-        <td><span class="green ball"></span>MATH 145</td>
-        <td><span class="green ball"></span>MATH 147</td>
-        <td><span class="green ball"></span>CS 145</td>
-        <td><span class="green ball"></span>ENGL 109</td>
-        <td><span class="green ball"></span>PHYS 121</td>
+        <td>MATH 145</td>
+        <td>MATH 147</td>
+        <td>CS 145</td>
+        <td>ENGL 109</td>
+        <td>PHYS 121</td>
         <td></td>
         <td></td>
         </tr>
         <tr class="even">
         <td>W ’23</td>
-        <td><span class="green ball"></span>MATH 146</td>
-        <td><span class="green ball"></span>MATH 148</td>
-        <td><span class="green ball"></span>CS 146</td>
-        <td><span class="green ball"></span>CS 136L</td>
-        <td><span class="green ball"></span>ENGL 108B</td>
-        <td><span class="green ball"></span>PHYS 122</td>
-        <td><span class="green ball"></span>PD 1</td>
+        <td>MATH 146</td>
+        <td>MATH 148</td>
+        <td>CS 146</td>
+        <td>CS 136L</td>
+        <td>PD 1</td>
+        <td>PHYS 122</td>
+        <td>ENGL 108B</td>
         </tr>
         <tr class="odd">
         <td>S ’23</td>
-        <td><span class="green ball"></span>COOP 1</td>
-        <td><span class="green ball"></span>PD 11</td>
+        <td>COOP 1</td>
+        <td>PD 11</td>
         <td></td>
         <td></td>
         <td></td>
@@ -215,56 +211,59 @@
         </tr>
         <tr class="even">
         <td>F ’23</td>
-        <td><span class="yellow ball"></span>MATH 245</td>
-        <td><span class="yellow ball"></span>MATH 247</td>
-        <td><span class="yellow ball"></span>STAT 240</td>
-        <td><span class="yellow ball"></span>CS 245E</td>
-        <td><span class="yellow ball"></span>CS 246E</td>
+        <td>MATH 245</td>
+        <td>MATH 247</td>
+        <td>STAT 240</td>
+        <td>CS 245E</td>
+        <td>CS 246E</td>
         <td></td>
         <td></td>
         </tr>
         <tr class="odd">
         <td>W ’24</td>
-        <td><span class="red ball"></span>MATH 249</td>
-        <td><span class="red ball"></span>STAT 241</td>
-        <td><span class="red ball"></span>CO 255</td>
-        <td><span class="red ball"></span>CS 240E</td>
-        <td><span class="red ball"></span>CS 241</td>
-        <td><span class="red ball"></span>JAPAN 101R</td>
+        <td>MATH 249</td>
+        <td>STAT 241</td>
+        <td>CO 255</td>
+        <td>CS 240E</td>
+        <td>CS 241</td>
+        <td>JAPAN 101R</td>
         <td></td>
         </tr>
         </tbody>
         </table>
         <h1 id="textbooks-readings">Textbooks &amp; Readings</h1>
-        <p>The coloured circles represent: <span
-        class="green ball"></span> read, <span
-        class="yellow ball"></span> currently reading, <span
-        class="red ball"></span> planned to read.</p>
         <h2 id="computer-science-textbooks">Computer Science
         Textbooks</h2>
+        <p><strong>Completed</strong></p>
         <ul>
-        <li><span class="green ball"></span> <em>Learn You a Haskell for
-        Great Good!</em> by Miran Lipovača</li>
-        <li><span class="yellow ball"></span> <em>Concurrency in Go</em>
-        by Katherine Cox-Buday</li>
-        <li><span class="yellow ball"></span> <em>Specifying
-        Systems</em> by Leslie Lamport</li>
-        <li><span class="yellow ball"></span> <em>Category Theory for
-        Programmers</em> by Bartosz Milewski</li>
-        <li><span class="yellow ball"></span> <em>Effective Modern
-        C++</em> by Scott Meyers</li>
-        <li><span class="red ball"></span> <em>Real World Haskell</em>
-        by O’Sullivan, Stewart &amp; Goerzen</li>
-        <li><span class="red ball"></span> <em>Structure and
-        Interpretation of Computer Programs</em> by Abelson, Sussman
-        &amp; Sussman</li>
+        <li><em>Learn You a Haskell for Great Good!</em> by Miran
+        Lipovača</li>
+        </ul>
+        <p><strong>In-Progress</strong></p>
+        <ul>
+        <li><em>Concurrency in Go</em> by Katherine Cox-Buday</li>
+        <li><em>Specifying Systems</em> by Leslie Lamport</li>
+        <li><em>Category Theory for Programmers</em> by Bartosz
+        Milewski</li>
+        </ul>
+        <p><strong>Reading List</strong></p>
+        <ul>
+        <li><em>Real World Haskell</em> by O’Sullivan, Stewart &amp;
+        Goerzen</li>
+        <li><em>Structure and Interpretation of Computer Programs</em>
+        by Abelson, Sussman &amp; Sussman</li>
         </ul>
         <h2 id="mathematics-textbooks">Mathematics Textbooks</h2>
+        <p><strong>Completed</strong></p>
         <ul>
-        <li><span class="green ball"></span> <em>To Mock a
-        Mockingbird</em> by Raymond Smullyan</li>
-        <li><span class="yellow ball"></span> <em>The Red Book of
-        Mathematical Problems</em> by Williams &amp; Hardy</li>
+        <li><em>To Mock a Mockingbird</em> by Raymond Smullyan</li>
+        </ul>
+        <p><strong>In-Progress</strong></p>
+        <ul>
+        <li><em>The Red Book of Mathematical Problems</em> by Williams
+        &amp; Hardy</li>
+        <li><em>Probability and Random Processes</em> by Grimmet &amp;
+        Stirzaker</li>
         </ul>
       </article>
     </main>
