added to simon's cozyring!

--- a/index.html
+++ b/index.html
@@ -268,6 +268,12 @@
       </article>
     </main>
     <footer>
+      <p>
+        This page is part of <a href="https://ring.simonwu.dev/">Simon's Cozyring</a>!
+        Check out the <a href="https://ring.simonwu.dev/prev/arnav">previous</a>,
+        <a href="https://ring.simonwu.dev/next/arnav">next</a>,
+        or a <a href="https://ring.simonwu.dev/random/arnav">random</a> page in the ring!
+      </p>
     </footer>
   </body>
 </html>
