reduced height of header and made more lynx-friendly

--- a/math-comp/reference.html
+++ b/math-comp/reference.html
@@ -7,14 +7,15 @@
   </head>
   <body>
     <header>
-      <h1 id="title">Competition Mathematics</h1>
-      <nav>
-        <a href="../index.html">Home</a>
-      </nav>
+      <hgroup>
+        <h1 id="title">Competition Mathematics</h1>
+        <nav>
+          <a href="../index.html">[Home]</a>
+        </nav>
+      </hgroup>
     </header>
     <main>
       <nav>
-        <h1><a href="#title">Competition Mathematics</a></h1>
         <ul>
         <li><a href="#algebra" id="toc-algebra"><span
         class="toc-section-number">1</span> Algebra</a>
