--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
   </head>
   <body>
     <header>
-      <h1 id="title">Arnav Kumar</h1>
-      <nav>
-        <a href="https://github.com/arnavcs">Github</a>
-        <a href="./resume/arnav-kumar.pdf">Resume</a>
-      </nav>
+      <hgroup>
+        <h1 id="title">Arnav Kumar</h1>
+        <nav>
+          <a href="https://github.com/arnavcs">[Github]</a>
+          <a href="./resume/arnav-kumar.pdf">[Resume]</a>
+        </nav>
+      </hgroup>
     </header>
     <main>
       <nav>
-        <h1><a href="#title">Arnav Kumar</a></h1>
         <ul>
         <li><a href="#mathematics-competitions"
         id="toc-mathematics-competitions">Mathematics Competitions</a>
@@ -23,7 +24,6 @@
         <li><a href="#accolades" id="toc-accolades">Accolades</a></li>
         <li><a href="#competition-reference"
         id="toc-competition-reference">Competition Reference</a></li>
-        <li><a href="#section" id="toc-section"></a></li>
         </ul></li>
         <li><a href="#projects" id="toc-projects">Projects</a>
         <ul>
@@ -79,18 +79,8 @@
         <h2 id="competition-reference">Competition Reference</h2>
         <a href="./math-comp/reference.html">[html]</a>
         </hgroup>
-        <h2 id="section"></h2>
         <h1 id="projects">Projects</h1>
-        <hgroup>
-        <h2 id="interplanetary-file-explorer">Interplanetary File
-        Explorer</h2>
-        <a href="https://ipfe.elguindi.xyz/">[try it]</a> <a
-        href="https://github.com/youssefsoli/IPFE">[github]</a> <a
-        href="https://devpost.com/software/changeme">[devpost]</a>
-        <p class="date">
-        Jan 2023
-        </p>
-        </hgroup>
+        <hgroup> <h2 id="interplanetary-file-explorer">Interplanetary File Explorer</h2> <a href="https://ipfe.elguindi.xyz/">[try it]</a> <a href="https://github.com/youssefsoli/IPFE">[github]</a> <a href="https://devpost.com/software/changeme">[devpost]</a> <p class="date"> Jan 2023 </p> </hgroup>
         <ul>
         <li>A visual file explorer of an IPFS written in Golang, Python,
         and JavaScript that uses one of Cohere’s NLP models to summarize
