--- a/math-comp/template.html
+++ b/math-comp/template.html
@@ -7,14 +7,15 @@
   </head>
   <body>
     <header>
-      <h1 id="title">$title$</h1>
-      <nav>
-        <a href="../index.html">Home</a>
-      </nav>
+      <hgroup>
+        <h1 id="title">$title$</h1>
+        <nav>
+          <a href="../index.html">[Home]</a>
+        </nav>
+      </hgroup>
     </header>
     <main>
       <nav>
-        <h1><a href="#title">$title$</a></h1>
         $toc$
       </nav>
       <article>
