--- a/template.html
+++ b/template.html
@@ -7,15 +7,16 @@
   </head>
   <body>
     <header>
-      <h1 id="title">$title$</h1>
-      <nav>
-        <a href="https://github.com/arnavcs">Github</a>
-        <a href="./resume/arnav-kumar.pdf">Resume</a>
-      </nav>
+      <hgroup>
+        <h1 id="title">$title$</h1>
+        <nav>
+          <a href="https://github.com/arnavcs">[Github]</a>
+          <a href="./resume/arnav-kumar.pdf">[Resume]</a>
+        </nav>
+      </hgroup>
     </header>
     <main>
       <nav>
-        <h1><a href="#title">$title$</a></h1>
         $toc$
       </nav>
       <article>
