--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <h1 id="title">Arnav Kumar</h1>
         <nav>
           <a href="https://github.com/arnavcs">[Github]</a>
-          <a href="./resume/arnav-kumar.pdf">[Resume]</a>
+          <a href="./resume-cv/resume.pdf">[Resume]</a>
+          <a href="./resume-cv/cv.pdf">[CV]</a>
         </nav>
       </hgroup>
     </header>
@@ -77,10 +78,19 @@
         </ul>
         <hgroup>
         <h2 id="competition-reference">Competition Reference</h2>
-        <a href="./math-comp/reference.html">[html]</a>
+        <a href="./competition/reference.html">[html]</a>
         </hgroup>
         <h1 id="projects">Projects</h1>
-        <hgroup> <h2 id="interplanetary-file-explorer">Interplanetary File Explorer</h2> <a href="https://ipfe.elguindi.xyz/">[try it]</a> <a href="https://github.com/youssefsoli/IPFE">[github]</a> <a href="https://devpost.com/software/changeme">[devpost]</a> <p class="date"> Jan 2023 </p> </hgroup>
+        <hgroup>
+        <h2 id="interplanetary-file-explorer">Interplanetary File
+        Explorer</h2>
+        <a href="https://ipfe.elguindi.xyz/">[try it]</a> <a
+        href="https://github.com/youssefsoli/IPFE">[github]</a> <a
+        href="https://devpost.com/software/changeme">[devpost]</a>
+        <p class="date">
+        Jan 2023
+        </p>
+        </hgroup>
         <ul>
         <li>A visual file explorer of an IPFS written in Golang, Python,
         and JavaScript that uses one of Cohere’s NLP models to summarize
