--- a/template.html
+++ b/template.html
@@ -11,7 +11,8 @@
         <h1 id="title">$title$</h1>
         <nav>
           <a href="https://github.com/arnavcs">[Github]</a>
-          <a href="./resume/arnav-kumar.pdf">[Resume]</a>
+          <a href="./resume-cv/resume.pdf">[Resume]</a>
+          <a href="./resume-cv/cv.pdf">[CV]</a>
         </nav>
       </hgroup>
     </header>
