added plotting functionality to build

--- a/competition/reference.html
+++ b/competition/reference.html
@@ -127,33 +127,37 @@
         id="toc-conditional-probability"><span
         class="toc-section-number">4.1</span> Conditional
         Probability</a></li>
+        <li><a href="#indicator-function"
+        id="toc-indicator-function"><span
+        class="toc-section-number">4.2</span> Indicator
+        Function</a></li>
         <li><a href="#bayes-theorem" id="toc-bayes-theorem"><span
-        class="toc-section-number">4.2</span> Bayes’ Theorem</a></li>
+        class="toc-section-number">4.3</span> Bayes’ Theorem</a></li>
         <li><a href="#bertrands-ballot-theorem"
         id="toc-bertrands-ballot-theorem"><span
-        class="toc-section-number">4.3</span> Bertrand’s Ballot
+        class="toc-section-number">4.4</span> Bertrand’s Ballot
         Theorem</a></li>
         <li><a href="#principle-of-inclusion-exclusion"
         id="toc-principle-of-inclusion-exclusion"><span
-        class="toc-section-number">4.4</span> Principle of
+        class="toc-section-number">4.5</span> Principle of
         Inclusion-Exclusion</a></li>
         <li><a href="#warings-theorem" id="toc-warings-theorem"><span
-        class="toc-section-number">4.5</span> Waring’s Theorem</a></li>
+        class="toc-section-number">4.6</span> Waring’s Theorem</a></li>
         <li><a href="#booles-inequality"
         id="toc-booles-inequality"><span
-        class="toc-section-number">4.6</span> Boole’s
+        class="toc-section-number">4.7</span> Boole’s
         Inequality</a></li>
         <li><a href="#bonferroni-inequalities"
         id="toc-bonferroni-inequalities"><span
-        class="toc-section-number">4.7</span> Bonferroni
+        class="toc-section-number">4.8</span> Bonferroni
         Inequalities</a></li>
         <li><a href="#kounias-inequality"
         id="toc-kounias-inequality"><span
-        class="toc-section-number">4.8</span> Kounias’
+        class="toc-section-number">4.9</span> Kounias’
         Inequality</a></li>
         <li><a href="#bernsteins-inequality"
         id="toc-bernsteins-inequality"><span
-        class="toc-section-number">4.9</span> Bernstein’s
+        class="toc-section-number">4.10</span> Bernstein’s
         Inequality</a></li>
         </ul></li>
         <li><a href="#combinatorics" id="toc-combinatorics"><span
@@ -268,7 +272,7 @@
         </hgroup>
         <p><strong>High School Problems</strong></p>
         <ul>
-        <li>Red Book q1</li>
+        <li>Red Book Q1</li>
         </ul>
         <hgroup>
         <h2 data-number="1.3" id="vietas-formula"><span
@@ -298,7 +302,7 @@
         </hgroup>
         <p><strong>Undergraduate Problems</strong></p>
         <ul>
-        <li>Red Book q1</li>
+        <li>Red Book Q1</li>
         </ul>
         <hgroup>
         <h2 data-number="2.2" id="legendre-symbol"><span
@@ -478,30 +482,40 @@
         <li>Assorted Problem (2)</li>
         </ul>
         <hgroup>
-        <h2 data-number="4.2" id="bayes-theorem"><span
-        class="header-section-number">4.2</span> Bayes’ Theorem</h2>
+        <h2 data-number="4.2" id="indicator-function"><span
+        class="header-section-number">4.2</span> Indicator Function</h2>
+        <a
+        href="https://en.wikipedia.org/wiki/Indicator_function">[wiki]</a>
+        </hgroup>
+        <p><strong>Undergraduate Problems</strong></p>
+        <ul>
+        <li>2023 Putnam B3</li>
+        </ul>
+        <hgroup>
+        <h2 data-number="4.3" id="bayes-theorem"><span
+        class="header-section-number">4.3</span> Bayes’ Theorem</h2>
         <a
         href="https://en.wikipedia.org/wiki/Bayes%27_theorem">[wiki]</a>
         </hgroup>
         <hgroup>
-        <h2 data-number="4.3" id="bertrands-ballot-theorem"><span
-        class="header-section-number">4.3</span> Bertrand’s Ballot
+        <h2 data-number="4.4" id="bertrands-ballot-theorem"><span
+        class="header-section-number">4.4</span> Bertrand’s Ballot
         Theorem</h2>
         <a
         href="https://en.m.wikipedia.org/wiki/Bertrand&#39;s_ballot_theorem">[wiki]</a>
         </hgroup>
         <hgroup>
-        <h2 data-number="4.4"
+        <h2 data-number="4.5"
         id="principle-of-inclusion-exclusion"><span
-        class="header-section-number">4.4</span> Principle of
+        class="header-section-number">4.5</span> Principle of
         Inclusion-Exclusion</h2>
         <a
         href="https://artofproblemsolving.com/wiki/index.php/Principle_of_Inclusion-Exclusion">[aops]</a>
         <a
         href="https://en.wikipedia.org/wiki/Inclusion%E2%80%93exclusion_principle#In_probability">[wiki]</a>
         </hgroup>
-        <h2 data-number="4.5" id="warings-theorem"><span
-        class="header-section-number">4.5</span> Waring’s Theorem</h2>
+        <h2 data-number="4.6" id="warings-theorem"><span
+        class="header-section-number">4.6</span> Waring’s Theorem</h2>
         <p>Let
         <math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><msub><mi>A</mi><mn>1</mn></msub><mo>,</mo><msub><mi>A</mi><mn>2</mn></msub><mo>,</mo><mi>…</mi><mo>,</mo><msub><mi>A</mi><mi>n</mi></msub></mrow><annotation encoding="application/x-tex">A_1,A_2,\dots,A_n</annotation></semantics></math>
         be events, and let
@@ -515,25 +529,25 @@
         Then,
         <math display="block" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mstyle mathvariant="double-struck"><mi>ℙ</mi></mstyle><mrow><mo stretchy="true" form="prefix">(</mo><msub><mi>N</mi><mi>k</mi></msub><mo stretchy="true" form="postfix">)</mo></mrow><mo>=</mo><munderover><mo>∑</mo><mrow><mi>i</mi><mo>=</mo><mn>0</mn></mrow><mrow><mi>n</mi><mo>−</mo><mi>k</mi></mrow></munderover><mrow><msup><mrow><mo stretchy="true" form="prefix">(</mo><mo>−</mo><mn>1</mn><mo stretchy="true" form="postfix">)</mo></mrow><mi>i</mi></msup><mrow><mo stretchy="true" form="prefix">(</mo><mfrac linethickness="0"><mrow><mi>k</mi><mo>+</mo><mi>i</mi></mrow><mi>i</mi></mfrac><mo stretchy="true" form="postfix">)</mo></mrow><msub><mi>S</mi><mrow><mi>k</mi><mo>+</mo><mi>i</mi></mrow></msub></mrow></mrow><annotation encoding="application/x-tex">\mathbb{P}(N_k)=\sum_{i=0}^{n-k}{(-1)^i {k+i \choose i} S_{k+i}}</annotation></semantics></math></p>
         <hgroup>
-        <h2 data-number="4.6" id="booles-inequality"><span
-        class="header-section-number">4.6</span> Boole’s Inequality</h2>
+        <h2 data-number="4.7" id="booles-inequality"><span
+        class="header-section-number">4.7</span> Boole’s Inequality</h2>
         <a
         href="https://en.wikipedia.org/wiki/Boole%27s_inequality">[wiki]</a>
         </hgroup>
         <hgroup>
-        <h2 data-number="4.7" id="bonferroni-inequalities"><span
-        class="header-section-number">4.7</span> Bonferroni
+        <h2 data-number="4.8" id="bonferroni-inequalities"><span
+        class="header-section-number">4.8</span> Bonferroni
         Inequalities</h2>
         <a
         href="https://en.wikipedia.org/wiki/Boole%27s_inequality#Bonferroni_inequalities">[wiki]</a>
         </hgroup>
-        <h2 data-number="4.8" id="kounias-inequality"><span
-        class="header-section-number">4.8</span> Kounias’
+        <h2 data-number="4.9" id="kounias-inequality"><span
+        class="header-section-number">4.9</span> Kounias’
         Inequality</h2>
         <p><math display="block" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mstyle mathvariant="double-struck"><mi>ℙ</mi></mstyle><mrow><mo stretchy="true" form="prefix">(</mo><munderover><mo>⋃</mo><mrow><mi>r</mi><mo>=</mo><mn>1</mn></mrow><mi>n</mi></munderover><msub><mi>A</mi><mi>r</mi></msub><mo stretchy="true" form="postfix">)</mo></mrow><mo>≤</mo><munder><mo>min</mo><mi>k</mi></munder><mrow><mo stretchy="true" form="prefix">{</mo><munderover><mo>∑</mo><mrow><mi>r</mi><mo>=</mo><mn>1</mn></mrow><mi>n</mi></munderover><mrow><mstyle mathvariant="double-struck"><mi>ℙ</mi></mstyle><mrow><mo stretchy="true" form="prefix">(</mo><msub><mi>A</mi><mi>r</mi></msub><mo stretchy="true" form="postfix">)</mo></mrow></mrow><mo>−</mo><munder><mo>∑</mo><mrow><mi>r</mi><mo>≠</mo><mi>k</mi></mrow></munder><mrow><mstyle mathvariant="double-struck"><mi>ℙ</mi></mstyle><mrow><mo stretchy="true" form="prefix">(</mo><msub><mi>A</mi><mi>r</mi></msub><mo>∩</mo><msub><mi>A</mi><mi>k</mi></msub><mo stretchy="true" form="postfix">)</mo></mrow></mrow><mo stretchy="true" form="postfix">}</mo></mrow></mrow><annotation encoding="application/x-tex">\mathbb{P}(\bigcup_{r=1}^{n}{A_r})\le \min_{k}{\left\{ \sum_{r=1}^{n}{\mathbb{P}(A_r)} - \sum_{r \ne k}{\mathbb{P}(A_r \cap A_k)} \right\}}</annotation></semantics></math></p>
         <hgroup>
-        <h2 data-number="4.9" id="bernsteins-inequality"><span
-        class="header-section-number">4.9</span> Bernstein’s
+        <h2 data-number="4.10" id="bernsteins-inequality"><span
+        class="header-section-number">4.10</span> Bernstein’s
         Inequality</h2>
         <a
         href="https://en.wikipedia.org/wiki/Bernstein_inequalities_(probability_theory)">[wiki]</a>
@@ -561,13 +575,13 @@
         class="header-section-number">5.3</span> Case Work</h2>
         <p><strong>High School Problems</strong></p>
         <ul>
-        <li>Red Book q2</li>
+        <li>Red Book Q2</li>
         </ul>
         <h2 data-number="5.4" id="bijective-counting"><span
         class="header-section-number">5.4</span> Bijective Counting</h2>
         <p><strong>High School Problems</strong></p>
         <ul>
-        <li>Red Book q2</li>
+        <li>Red Book Q2</li>
         </ul>
         <h2 data-number="5.5" id="vandermondes-identity"><span
         class="header-section-number">5.5</span> Vandermonde’s
