--- a/index.html
+++ b/index.html
@@ -242,6 +242,8 @@
         </ul>
         <p><strong>In-Progress</strong></p>
         <ul>
+        <li><em>Real-Time Rendering</em> by Akenine-Möller, Haines,
+        Hoffman, Pesce, Iwanicki, &amp; Hillaire</li>
         <li><em>Specifying Systems</em> by Leslie Lamport</li>
         <li><em>Category Theory for Programmers</em> by Bartosz
         Milewski</li>
@@ -251,7 +253,7 @@
         <li><em>Real World Haskell</em> by O’Sullivan, Stewart &amp;
         Goerzen</li>
         <li><em>Structure and Interpretation of Computer Programs</em>
-        by Abelson, Sussman &amp; Sussman</li>
+        by Abelson, Sussman, &amp; Sussman</li>
         </ul>
         <h2 id="mathematics-textbooks">Mathematics Textbooks</h2>
         <p><strong>Completed</strong></p>
