--- a/courses/ex/template.html
+++ b/courses/ex/template.html
@@ -10,7 +10,7 @@
       <hgroup>
         <h1 id="title">$title$</h1>
         <nav>
-          <a href="../index.html">[Home]</a>
+          <a href="../../index.html">[Home]</a>
         </nav>
       </hgroup>
     </header>
